[package]
name = "krsk"
description = "krsk is very cool tool for crates.io integration"
license = "MIT"
version = "0.1.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
